homelab/k8s/arr-stack/anime.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: anime
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: anime
  template:
    metadata:
      labels:
        app: anime
    spec:
      containers:
        - name: anime
          image: linuxserver/sonarr
          ports:
            - containerPort: 8989
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /starr
              name: downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: anime-config
        - name: downloads
          nfs:
            path: /opt/tank1/starr
            server: stormwind.lan
---

apiVersion: v1
kind: Service
metadata:
  name: anime
spec:
  selector:
    app: anime
  ports:
    - port: 80
      name: http
      targetPort: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anime
spec:
  ingressClassName: nginx
  rules:
    - host: anime.k8s
      http:
        paths:
          - backend:
              service:
                name: anime
                port:
                  name: http
            pathType: Prefix
            path: /
