homelab/k8s/arr-stack/bazarr-anime.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr-anime
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bazarr-anime
  template:
    metadata:
      labels:
        app: bazarr-anime
    spec:
      containers:
        - name: bazarr-anime
          image: linuxserver/bazarr
          ports:
            - containerPort: 6767
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /starr
              name: downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-anime-config
        - name: downloads
          nfs:
            path: /opt/tank1/starr
            server: nfs.k8s
---

apiVersion: v1
kind: Service
metadata:
  name: bazarr-anime
spec:
  selector:
    app: bazarr-anime
  ports:
    - port: 80
      name: http
      targetPort: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr-anime
spec:
  ingressClassName: nginx
  rules:
    - host: bazarr-anime.k8s
      http:
        paths:
          - backend:
              service:
                name: bazarr-anime
                port:
                  name: http
            pathType: Prefix
            path: /
