homelab/k8s/arr-stack/huntarr.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: huntarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: huntarr
  template:
    metadata:
      labels:
        app: huntarr
    spec:
      containers:
        - name: huntarr
          image: huntarr/huntarr
          ports:
            - containerPort: 9705
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: huntarr-config

---

apiVersion: v1
kind: Service
metadata:
  name: huntarr
spec:
  selector:
    app: huntarr
  ports:
    - port: 80
      name: http
      targetPort: http

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: huntarr
spec:
  hostnames:
  - huntarr.k8s
  parentRefs:
    - name: starr
  rules:
    - backendRefs:
        - name: huntarr
          port: 80
