homelab/k8s/arr-stack/jackett.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - name: jackett
          image: linuxserver/jackett
          ports:
            - containerPort: 9117
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
      volumes:
        - name: downloads
          nfs:
            path: /opt/tank1/starr/torrent
            server: nfs.k8s
        - name: config
          persistentVolumeClaim:
            claimName: jackett-config

---

apiVersion: v1
kind: Service
metadata:
  name: jackett
spec:
  selector:
    app: jackett
  ports:
    - port: 80
      name: http
      targetPort: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
spec:
  ingressClassName: nginx
  rules:
    - host: jackett.k8s
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: jackett
                port:
                  name: http
