homelab/k8s/arr-stack/lidarr.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr
          ports:
            - containerPort: 8686
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /starr
              name: downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: downloads
          nfs:
            path: /opt/tank1/starr
            server: nfs.k8s
---

apiVersion: v1
kind: Service
metadata:
  name: lidarr
spec:
  selector:
    app: lidarr
  ports:
    - port: 80
      name: http
      targetPort: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
spec:
  ingressClassName: nginx
  rules:
    - host: lidarr.k8s
      http:
        paths:
          - backend:
              service:
                name: lidarr
                port:
                  name: http
            pathType: Prefix
            path: /
