homelab/k8s/arr-stack/prowlarr.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:2.1.5.5216-ls131
          ports:
            - containerPort: 9696
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
---

apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
    - port: 80
      name: http
      targetPort: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
spec:
  ingressClassName: nginx
  rules:
    - host: prowlarr.k8s
      http:
        paths:
          - backend:
              service:
                name: prowlarr
                port:
                  name: http
            pathType: Prefix
            path: /
