homelab/k8s/arr-stack/radarr.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr
          ports:
            - containerPort: 7878
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /starr
              name: downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: downloads
          nfs:
            path: /opt/tank1/starr
            server: nfs.k8s
---

apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  selector:
    app: radarr
  ports:
    - port: 80
      name: http
      targetPort: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
spec:
  ingressClassName: nginx
  rules:
    - host: radarr.k8s
      http:
        paths:
          - backend:
              service:
                name: radarr
                port:
                  name: http
            pathType: Prefix
            path: /
