homelab/k8s/arr-stack/readarr.yaml

  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: readarr
  spec:
    replicas: 1
    strategy:
      type: Recreate
    selector:
      matchLabels:
        app: readarr
    template:
      metadata:
        labels:
          app: readarr
      spec:
        containers:
          - name: readarr
            image: linuxserver/readarr:develop
            imagePullPolicy: Always
            ports:
              - containerPort: 8787
                name: http
            volumeMounts:
              - mountPath: /config
                name: config
              - mountPath: /starr
                name: downloads
        volumes:
          - name: config
            persistentVolumeClaim:
              claimName: readarr-config
          - name: downloads
            nfs:
              path: /opt/tank1/starr
              server: nfs.k8s

---

apiVersion: v1
kind: Service
metadata:
  name: readarr
spec:
  selector:
    app: readarr
  ports:
    - port: 80
      name: http
      targetPort: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readarr
spec:
  ingressClassName: nginx
  rules:
    - host: readarr.k8s
      http:
        paths:
          - backend:
              service:
                name: readarr
                port:
                  name: http
            pathType: Prefix
            path: /
