homelab/k8s/arr-stack/sabnzbd.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
        - name: sabnzbd
          image: linuxserver/sabnzbd
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /starr/usenet
              name: downloads
      volumes:
        - name: downloads
          nfs:
            path: /opt/tank1/starr/usenet
            server: stormwind.lan
        - name: config
          persistentVolumeClaim:
            claimName: sabnzbd-config

---

apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  selector:
    app: sabnzbd
  ports:
    - port: 80
      name: http
      targetPort: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
    - host: sabnzbd.k8s
      http:
        paths:
          - backend:
              service:
                name: sabnzbd
                port:
                  name: http
            pathType: Prefix
            path: /
