homelab/k8s/arr-stack/sonarr.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr
          ports:
            - containerPort: 8989
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /starr
              name: downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: downloads
          nfs:
            path: /opt/tank1/starr
            server: nfs.k8s
---

apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  selector:
    app: sonarr
  ports:
    - port: 80
      name: http
      targetPort: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
spec:
  ingressClassName: nginx
  rules:
    - host: sonarr.k8s
      http:
        paths:
          - backend:
              service:
                name: sonarr
                port:
                  name: http
            pathType: Prefix
            path: /
