homelab/k8s/arr-stack/transmission.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
        - name: transmission
          image: haugene/transmission-openvpn
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - containerPort: 9091
              name: http
          livenessProbe:
            exec:
              command: [ "ping", "-I", "tun0", "-c", "1", "google.com" ]
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
          volumeMounts:
            - mountPath: /starr/torrent
              name: downloads
      volumes:
        - name: downloads
          nfs:
            path: /opt/tank1/starr/torrent
            server: stormwind.lan

---

apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  selector:
    app: transmission
  ports:
    - port: 80
      name: http
      targetPort: http

---

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: transmission
spec:
  ingressClassName: nginx
  rules:
    - host: transmission.k8s
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: transmission
                port:
                  name: http
